fix projects overflow

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -13,8 +13,22 @@
     transform: rotate(180deg);
 }
 .Contacts .Body{
-    background: rgb(36, 36, 36);
-    height: 40vh;
+    background: rgb(44, 44, 44);
+    height: 60vh;
     position: relative;
     
+}
+
+.Image{
+    height: 100%;
+    width: 100%;
+    background: url('../../assets/images/computer-desk.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.04;
 }
