--- a/src/container/Projects/Projects.module.css
+++ b/src/container/Projects/Projects.module.css
@@ -2,6 +2,7 @@
     position: relative;
     margin-top: 100px;
     margin-bottom: 200px;
+    overflow: hidden;
 }
 
 .Projects .Title {
